--- a/Source/dclDBILibD2006.cfg
+++ b/Source/dclDBILibD2006.cfg
@@ -31,7 +31,7 @@
 -M
 -$M16384,1048576
 -K$00400000
--N0"C:\Temp\dcu"
+-N0"C:\Temp\dcu\2006"
 -LE"O:\Prj\DelphiPackages\10.0"
 -LN"O:\Prj\DelphiPackages\10.0"
 -U"c:\program files\borland\bds\4.0\Source\Property Editors"
