DBILib - Sanitizing of TestHarness projects.

--- a/TestHarness/Source/DBILibTestHarness.cfg
+++ b/TestHarness/Source/DBILibTestHarness.cfg
@@ -27,7 +27,7 @@
 -GD
 -cg
 -vn
--AWinTypes=Windows;WinProcs=Windows;DbiTypes=BDE;DbiProcs=BDE;DbiErrs=BDE;
+-AWinTypes=Windows;WinProcs=Windows;DbiTypes=BDE;DbiProcs=BDE;DbiErrs=BDE;UITypes=omUITypes
 -H+
 -W+
 -M
