DBILib-351 - Made code compatible with new Data.DB

--- a/TestHarness/Source/DBILibTestHarness.dproj
+++ b/TestHarness/Source/DBILibTestHarness.dproj
@@ -51,6 +51,9 @@
         <DelphiCompile Include="$(MainSource)">
             <MainSource>MainSource</MainSource>
         </DelphiCompile>
+        <DCCReference Include="..\..\Source\Data.DB.pas">
+            <ModuleName>DB</ModuleName>
+        </DCCReference>
         <BuildConfiguration Include="Base">
             <Key>Base</Key>
         </BuildConfiguration>
