DBILib - List Datasets, Memo field changes - I

--- a/Source/DBILibXE3.dproj
+++ b/Source/DBILibXE3.dproj
@@ -58,6 +58,7 @@
         <DCCReference Include="vcldb.dcp"/>
         <DCCReference Include="vclx.dcp"/>
         <DCCReference Include="DBIConst.pas"/>
+        <DCCReference Include="DBITypInfo.pas"/>
         <DCCReference Include="DBICustomListDataConnections.pas"/>
         <DCCReference Include="DBICustomStreamDataConnections.pas"/>
         <DCCReference Include="DBIDataSet.pas"/>
